fix: Handle missing primary_liquid method for gas giants in monitor view
- Use respond_to? check for primary_liquid (only in SolidBodyConcern)
- Gas giants don't have this method, default to 'H2O'
- All celestial body types now render monitor view correctly

--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -32,7 +32,7 @@
           gravity: @celestial_body.gravity,
           geosphere_attributes: @celestial_body.geosphere&.attributes,
           crust_composition: @celestial_body.geosphere&.crust_composition,
-          liquid_name: @celestial_body.hydrosphere&.liquid_name || 'H2O',
+          liquid_name: (@celestial_body.respond_to?(:primary_liquid) ? @celestial_body.primary_liquid : nil) || 'H2O',
           water_coverage: @celestial_body.hydrosphere&.water_coverage || 0
         },
         geosphere_present: @celestial_body.geosphere.present?,
