fix: Only show biomes layer for planets with biospheres
Mars and other barren planets should not display green forest biomes.
Added has_biosphere check to planet_data and biome layer rendering.
Now biomes only render if the planet actually has a biosphere model.

--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -33,9 +33,11 @@
           geosphere_attributes: @celestial_body.geosphere&.attributes,
           crust_composition: @celestial_body.geosphere&.crust_composition,
           liquid_name: (@celestial_body.respond_to?(:primary_liquid) ? @celestial_body.primary_liquid : nil) || 'H2O',
-          water_coverage: @celestial_body.hydrosphere&.water_coverage || 0
+          water_coverage: @celestial_body.hydrosphere&.water_coverage || 0,
+          has_biosphere: @celestial_body.biosphere.present?
         },
         geosphere_present: @celestial_body.geosphere.present?,
+        biosphere_present: @celestial_body.biosphere.present?,
         terrain_map_present: @celestial_body.geosphere&.terrain_map.present?
       }
     %>
