--- a/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
+++ b/galaxy_game/app/views/admin/celestial_bodies/monitor.html.erb
@@ -152,9 +152,14 @@
                         <label>Zoom: <span id="zoomValue" class="value-display">1.0x</span></label>
                         <input type="range" id="zoom" min="0.5" max="4" step="0.1" value="1">
                     </div>
+                    <div class="control-group">
+                        <button id="resetViewBtn" class="tool-button" title="Reset view to center">⌂ Reset</button>
+                    </div>
                 </div>
             </div>
-            <canvas id="planetCanvas" width="800" height="400"></canvas>
+            <div id="canvasContainer">
+                <canvas id="planetCanvas" width="800" height="400"></canvas>
+            </div>
             <div id="featureTooltip" class="hidden">
                 <div id="tooltipContent"></div>
             </div>
